[package]
name = "rust-ai-ide-ai1-reviews"

version = "0.1.0"
edition = "2021"
description = "Wave 1: Automated Code Reviews and Quality Assessment"
authors = ["Roo <ai assistant>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
futures = "0.3"
rust-ai-ide-ai1-semantic = { path = "../rust-ai-ide-ai1-semantic" }
rust-ai-ide-ai1-architecture = { path = "../rust-ai-ide-ai1-architecture" }